--- a/src/index.html
+++ b/src/index.html
@@ -8,8 +8,8 @@
 		<div id='root'>
 			Hi. Im root div
 		</div>
-		
-		<script src="/js/react-app.js" charset="utf-8"></script>
-		<script src="/js/main.js" charset="utf-8"></script>
+
+		<script src="./js/react-app.js" charset="utf-8"></script>
+		<script src="./js/main.js" charset="utf-8"></script>
 	</body>
 </html>
