--- a/index.html
+++ b/index.html
@@ -1,1 +1,13 @@
-<!DOCTYPE html><html><head><meta charset="utf-8"><title>Hello World!</title></head><body><div id="root">Hi. Im root div</div><script src="/public/js/react-app.js" charset="utf-8"></script><script src="/public/js/main.js" charset="utf-8"></script></body></html>
+<!DOCTYPE html>
+<html>
+	<head>
+		<meta charset="utf-8">
+		<title>Jugan Studio</title>
+	</head>
+	<body>
+		<div id="root">We're Jugan Studio</div>
+		<script src="/public/js/react-app.js" charset="utf-8"></script>
+		<script src="/public/js/main.js" charset="utf-8"></script>
+		<link rel="stylesheet" href="/public/css/style.css" >
+	</body>
+</html>
