--- a/public/index.html
+++ b/public/index.html
@@ -1,1 +1,1 @@
-<!DOCTYPE html><html><head><meta charset="utf-8"><title>Hello World!</title></head><body><div id="root">Hi. Im root div</div><script src="./js/react-app.js" charset="utf-8"></script><script src="./js/main.js" charset="utf-8"></script></body></html>
+<!DOCTYPE html><html><head><meta charset="utf-8"><title>Hello World!</title></head><body><div id="root">Hi. Im root div</div><script src="./js/react-app.js" charset="utf-8"></script><script src="./js/main.js" charset="utf-8"></script><link rel="stylesheet" href="./css/style.css"></body></html>
