--- a/src/index.html
+++ b/src/index.html
@@ -11,5 +11,6 @@
 
 		<script src="./js/react-app.js" charset="utf-8"></script>
 		<script src="./js/main.js" charset="utf-8"></script>
+		<link rel="stylesheet" href="./css/style.css">
 	</body>
 </html>
