--- a/index.html
+++ b/index.html
@@ -2,12 +2,16 @@
 <html>
 	<head>
 		<meta charset="utf-8">
-		<title>Jugan Studio</title>
+		<title>Jugan Studio index</title>
 	</head>
 	<body>
-		<div id="root">We're Jugan Studio</div>
+		<!-- <div id="root">We're Jugan Studio</div>
 		<script src="/public/js/react-app.js" charset="utf-8"></script>
 		<script src="/public/js/main.js" charset="utf-8"></script>
-		<link rel="stylesheet" href="/public/css/style.css" >
+		<link rel="stylesheet" href="/public/css/style.css" > -->
+		<script type="text/javascript">
+			alert('redirecting...')
+			window.location.href = './public/';
+		</script>
 	</body>
 </html>
