add bower, bootstrap, google web fonts

--- a/src/index.html
+++ b/src/index.html
@@ -8,11 +8,12 @@
 		<link rel="stylesheet" href="./fonts/googlefonts.css">
 		<link rel="stylesheet" href="./css/bootstrap-theme.min.css">
 		<link rel="stylesheet" href="./css/bootstrap.min.css">
+		<script src="./bower_components/jquery/dist/jquery.min.js" charset="utf-8"></script>
 		<script src="./js/bootstrap.min.js" charset="utf-8"></script>
 	</head>
 	<body>
 		<div id='root'>
-			Hi. Im root div
+			Loading..
 		</div>
 
 		<script src="./js/react-app.js" charset="utf-8"></script>
